<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/back"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="185dp"
        android:layout_height="213dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/top_left_g" />


    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/bottom_right_m" />

    <TextView
        android:id="@+id/tut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="212dp"
        android:gravity="center"
        android:text="@string/select"
        android:textColor="@color/purple500"
        android:textSize="30dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.489"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:text="@string/desc"
        android:textColor="@color/purpleBajo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tut" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnEasy"
        android:layout_width="261dp"
        android:layout_height="76dp"
        android:background="@drawable/bottones"
        android:gravity="center"
        android:layout_marginTop="25dp"
        android:text="@string/retop"
        android:textColor="@color/white"
        android:textDirection="inherit"
        android:textSize="15dp"
        android:textStyle="italic"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnMedium"
        android:layout_width="261dp"
        android:layout_height="76dp"
        android:layout_marginTop="25dp"
        android:text="@string/retoM"
        android:textStyle="normal"
        android:textDirection="inherit"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="2dp"
        android:background="@drawable/bottones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnEasy"
        />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btnHard"
        android:layout_width="261dp"
        android:layout_height="76dp"
        android:layout_marginTop="25dp"
        android:text="@string/retoH"
        android:textStyle="normal"
        android:textDirection="inherit"
        android:textSize="15dp"
        android:textColor="@color/white"
        android:gravity="center"
        android:paddingTop="2dp"
        android:background="@drawable/bottones"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/btnMedium" />




</androidx.constraintlayout.widget.ConstraintLayout>
