<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/dialog_backgroud"
    android:layout_margin="10dp"
    android:layout_gravity="center">

    <!-- TODO: Update blank fragment layout -->
    <LinearLayout
        android:id="@+id/fon"
        android:layout_width="413dp"
        android:layout_height="58dp"
        android:foregroundGravity="center"
        android:background="@drawable/cabezal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/titleD"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/retop"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="30dp"
            android:textStyle="bold" />
    </LinearLayout>
    />

    <LinearLayout
        android:id="@+id/li"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="5dp"
        android:background="@color/back"
        app:layout_constraintTop_toBottomOf="@+id/fon">

        <TextView
            android:id="@+id/Desc1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:textColor="@color/black"
            android:gravity="start"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/det"
            android:textSize="15dp"
            android:backgroundTint="@color/back"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/desc2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/back"
            android:gravity="center"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/det2"
            android:textSize="15dp"
            android:textStyle="italic" />
        <TextView
            android:id="@+id/desc3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:background="@color/back"
            android:gravity="center"
            android:layout_margin="5dp"
            android:paddingTop="5dp"
            android:paddingBottom="5dp"
            android:text="@string/det3"
            android:textSize="15dp"
            android:textStyle="italic" />
    </LinearLayout>




    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:background="@color/back"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/li">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/atras"
            android:layout_width="120dp"
            android:layout_height="68dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/buttons_inversa"
            android:text="atras"
            android:textColor="@color/purple500"
            android:textSize="20dp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/aceptar"
            android:layout_width="120dp"
            android:layout_height="65dp"
            android:layout_margin="10dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="48dp"
            android:background="@drawable/buttons_inversa"
            android:text="aceptar"
            android:textColor="@color/purple500"
            android:textSize="20dp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>